[project]
name = "me3-manager-help"
version = "0.1.0"
description = "Documentation and blog for Mod Engine 3 Manager"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "2Pz" }
]
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.34",
  "pymdown-extensions>=10.8",
]

[tool.uv]
# Don't install dev dependencies on 'uv run'
default-groups = []
